# SimpleAudioLibrary

./: .gitignore  CHANGELOG.md  Doxyfile  LICENSE.md  README.md  conanfile.py
Code/: Doxyfile  SimpleAudioLibrary.vcxproj  SimpleAudioLibrary.vcxproj.filters  makefile
Code/Header/SimpleAudioLib/: AudioEntity.h  BaseMessageException.h  CoreSystem.h  CorruptedFileException.h  InvalidPathException.h  NoContextException.h  NoDeviceException.h
Code/Source/: AudioEntity.cpp  BaseMessageException.cpp  CoreSystem.cpp
src/: AudioEntity.cpp  AudioEntity.h  BaseException.cpp  BaseMessageException.cpp  BaseMessageException.h  CMakeLists.txt  CoreSystem.cpp  CoreSystem.h  CorruptedFileException.h  Doxyfile  InvalidPathException.h  Listener.cpp  Listener.h  NoContextException.h  NoDeviceException.h  SimpleAudioLibrary.sln  Sound.cpp  Sound.h  Source.cpp  Source.h  SourceState.h  makefile
src/Header/SimpleAudioLib/: CoreSystem.h
test_package/: conanfile.py  example.cpp
